--- a/_posts/2019-12-24-the-us-narrative-today.html
+++ b/_posts/2019-12-24-the-us-narrative-today.html
@@ -1691,107 +1691,107 @@ stories:
   domain: http://www.sanmarcosrecord.com/
   link: https://www.sanmarcosrecord.com/news/texas-barbershop-worker-shot-over-childs-haircut-police-say
 images:
-- name: statue-face-open-mouth-statue-face-open-mouth-attack-planes.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-attack-planes.png
-- name: server-cloud-server-racks-clouds-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-feed-people.jpg
-- name: legal-statue-legalstatue-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-brush.jpg
-- name: beach-rocks-beach-rocks-currents-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-gan-vogh.jpg
-- name: flower-barbed-wire-flower-barbed-wire-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-colored-circuits.jpg
-- name: dragon-desert-desert-dragon-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-sand-paper.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-purp-paper.jpg
-- name: old-school-house-old-schoolhouse-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-light-dali.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-colored-circuits.jpg
-- name: berlinwall2-berlinwall-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-constitution.jpg
-- name: dc-statue-dcstatue-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-atari-missle.jpg
-- name: wind-mills-windmills-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dark-rain.jpg
-- name: beach-clouds-lifeguard-beachclouds-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-atari-missle.jpg
-- name: server-cloud-server-racks-clouds-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-space-pizza.jpg
-- name: mosaic-face-mosaic-face-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-marcel-duchamp.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-feed-people.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-feed-people.JPG
-- name: braceros-domingo-ulloa-castle-window_35928999923_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-castle-window_35928999923_o.jpg
-- name: dragon-desert-desert-dragon-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dark-dali.jpg
-- name: old-church-oldchurch-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-crafty-painting.jpg
-- name: old-school-house-old-schoolhouse-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-crabapple.jpg
-- name: powerlines-power-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-atari-asteroids.jpg
-- name: dragon-desert-desert-dragon-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-kandinsky-bv.jpg
-- name: oldroad-old-road-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-nazi-poster.jpg
-- name: crow-crow-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dry-skin.jpg
-- name: la-muse-do-not-turn-trolley-car.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-do-not-turn-trolley-car.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-really-hot.jpg
-- name: stories-dark-clouds-la-buildings.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-dark-clouds-la-buildings.jpg
-- name: old-barn-old-barn-1500-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dark-rain.jpg
-- name: bf-skinner-high-speed-train-station-france.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-high-speed-train-station-france.jpg
-- name: capital-dc-flag-side-view-uncle-sam.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-dc-flag-side-view-uncle-sam.jpg
-- name: legal-statue-legalstatue-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-clean-view.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-light-dali.jpg
-- name: machine-road-machine-road-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-spagetti-accident.jpg
-- name: oldsmallboat-oldsmallboat-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-monet-one.jpg
-- name: gypsy-wagon-gypsywagon-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-creativity.jpg
-- name: downtown-trucksilo-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-purple-storm.jpg
-- name: nazi-invasion-satellite-dishes-pointing-up.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-satellite-dishes-pointing-up.jpg
-- name: downtheline-downtheline-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-yellow-paper.jpg
-- name: san-francisco-street-view-san-francisco-street-view-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-deep-connections.jpg
-- name: containership-containership-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-copper-circuit.jpg
-- name: hollywood-building-hollywood-building-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-horiz-circuit.jpg
-- name: oldhouse-granaryfield-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-yellow-collage.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-emily-carr.jpg
-- name: old-granary-field-granaryfield-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-neo-instinct.jpg
-- name: lincoln-memorial-lincolnmemorial-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-purp-paper.jpg
-- name: server-cloud-server-racks-clouds-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-pablo-blue.jpg
-- name: oldhouse-granaryfield-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-rainbow-festival.jpg
-- name: bluelake-gan-vogh-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gan-vogh-file-00-01-17-38.jpg
-- name: white-house-lawn-white-house-window-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-bright-sand.jpg
-- name: nazi-invasion-memorial-to-the-jews-in-berlin-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-memorial-to-the-jews-in-berlin-2.jpg
-- name: abe-lincoln-one-ww2-dresden-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-dresden-file-00-00-15-87.jpg
+- name: old-house-oldhouse-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-dali-three.jpg
+- name: capital-battle-capitolbattle-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-umberto-bocc.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-yellow-collage.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-yellow-collage.JPG
+- name: pigeons-on-the-ledge-pigeons-on-ledge-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-bright-sand.jpg
+- name: copper-circuit-blechlety-old-racks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-blechlety-old-racks.jpg
+- name: razorwire-DSC-0080-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dry-skin.jpg
+- name: cargo-ship-cargo-ship-on-sea-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-free-woman.jpg
+- name: windowmountain-window-mountain-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-satan-red.jpg
+- name: braceros-domingo-ulloa-high-speed-train-station-france.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-high-speed-train-station-france.jpg
+- name: beach-rocks-beach-rocks-currents-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-kand-two.jpg
+- name: stories-solidies-planning-attack-blue-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-solidies-planning-attack-blue-matrix.jpg
+- name: rain-princess-DSC_0029.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0029.jpg
+- name: downtown-trucksilo-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-monet-one.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-oily-mcoilface.jpg
+- name: old-door-lock-old-door-lock-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-free-woman.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-constitution.jpg
+- name: machine-road-machine-road.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road.jpg
+- name: school-clouds-church-clouds-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-dark-dali.jpg
+- name: la-muse-cruise-ship-shore-log.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-cruise-ship-shore-log.jpg
+- name: powerlines-power-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-bright-sand.jpg
+- name: 35201856153_61bc075e4b-scream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-scream.jpg
+- name: razorcliff-razorcliff-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-post-modern.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-blue-electricity.jpg
+- name: supreme-court-supremecourt-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-propaganda-leaflets.jpg
+- name: bf-skinner-rocking-chair-on-porch_36332220150_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-rocking-chair-on-porch_36332220150_o.jpg
+- name: curtain-curtain-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-hot-spicy.jpg
+- name: catacombs-catacombs-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-gan-vogh.jpg
+- name: locked-up-steam-lock-up-steam-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-pablo-blue.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-crabapple.jpg
+- name: old-church-oldchurch-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-rainbow-festival.jpg
+- name: stalin-time-hallway-mirrors-hotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-hallway-mirrors-hotel.jpg
+- name: yosemite-yosemite-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-satan-red.jpg
+- name: power-lines-power-lines-empty-space-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-purp-paper.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-atari-asteroids.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-atari-asteroids.JPG
+- name: flower-barbed-wire-flower-barbed-wire-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-attack-planes.jpg
+- name: paris-paris-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-diego-rivera1.jpg
+- name: server-cloud-server-racks-door-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-circuit.jpg
+- name: art-museum-art-museum-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-kand-two.jpg
+- name: crow_atari_asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_atari_asteroids.jpg
+- name: san-francisco-street-view-san-francisco-street-view-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-spagetti-accident.jpg
+- name: oldcabin-store-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-blue-electricity.jpg
+- name: adam-smith-adam-smith-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-spagetti-accident.jpg
+- name: oldroad-old-road-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-blue-brush.jpg
+- name: flower-barbed-wire-flower-barbed-wire-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-propaganda-leaflets.jpg
+- name: locked-up-steam-lock-up-steam-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-constitution.jpg
+- name: old-barn-old-barn-1500-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-gan-vogh.jpg
+- name: supreme-court-supremecourt-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-crafty-painting.jpg
+- name: carry-load-carryload-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-ww2-color.jpg
+- name: udnie-IMG_4833.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4833.jpg
+- name: amusement-park-amusement-park-2-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-copper-circuit.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-post-modern.jpg
 ---
 Why Your Next Downtown Lunch Should Be At Partenope Ristorante.&nbsp;Meet The Virginia Press Foundation Board Members And Executive Committee.&nbsp;Hoosiers Urged To Practice Ice Safety.&nbsp;Wealaka Chapter Celebrates 10th Year.&nbsp;Myers Road Traffic Light Needs Power.&nbsp;Family Has Reason For Thanks.&nbsp;Drugs Seized After State Trooper Checks Disabled Vehicle.&nbsp;SunRail Back On Time After Downed Power Line Causes Delays.&nbsp;
