--- a/_posts/2019-12-24-the-us-narrative-today.html
+++ b/_posts/2019-12-24-the-us-narrative-today.html
@@ -1736,107 +1736,107 @@ stories:
   domain: http://www.dispatch.com/
   link: https://www.oneidadispatch.com/news/national/hong-kong-clashes-continue-in-shopping-centers-streets/image_b4be2fb5-5671-5479-90f6-97633e38cf89.html
 images:
-- name: nazi-invasion-water-splashing-in-rocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-water-splashing-in-rocks.jpg
-- name: san-francisco-street-view-san-francisco-street-view-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-colored-circuits.jpg
-- name: gears-4882162452-fa3126b38d-b-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dali-three.jpg
-- name: aws-s3-canyon-canyon-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-canyon-canyon-still-1200.jpg
-- name: aws-s3-stories-los-angeles-downtow-freeway-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-los-angeles-downtow-freeway-blue-circuit-5.jpg
-- name: oldhouse-oldhouse-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-feed-people.jpg
-- name: abandonedbuildings_marcel_duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_marcel_duchamp.jpg
-- name: dc-statue-dcstatue-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-matrix.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-copper-circuit.jpg
-- name: crow-crow-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-oily-mcoilface.jpg
-- name: aws-s3-stories-old-barn.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-old-barn.jpg
-- name: machine-road-machine-road-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-gan-vogh.jpg
-- name: window-window-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dark-dali.jpg
-- name: long-factory-leaflets-of-the-russian-revolution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/long-factory-leaflets-of-the-russian-revolution.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-purple-pond.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-propaganda-leaflets.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-propaganda-leaflets.JPG
-- name: stalin-time-vancouver-waterfront_36556357642_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-vancouver-waterfront_36556357642_o.jpg
-- name: nazi-invasion-IMG_6968.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6968.jpg
-- name: old-house-oldhouse-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-monet-one.jpg
-- name: power-lines-power-lines-empty-space-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-light-dali.jpg
-- name: old-door-lock-old-door-lock-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-circuit.jpg
-- name: nyc-flag-nycflag-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-yellow-collage.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-oily-mcoilface.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-oily-mcoilface.JPG
-- name: bf-skinner-steam-engine-iceland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-steam-engine-iceland.jpg
-- name: castle-wall-DSC-0067-dark-soul.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-dark-soul.JPG
-- name: cargo-ship-cargo-ship-on-sea-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-alberto-giacometti.jpg
-- name: oldcabin-store-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-matrix.jpg
-- name: berlinwall2-berlinwall-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-oily-mcoilface.jpg
-- name: udnie-IMG_8471.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8471.jpg
-- name: power-lines-power-lines-empty-space-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-oily-mcoilface.jpg
-- name: ellis-island-ellisisland-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-dry-skin.jpg
-- name: castle-wall-DSC-0067-creativity.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-creativity.JPG
-- name: dragon-desert-desert-dragon-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-satan-red.jpg
-- name: bluelake-purp-paper-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-purp-paper-file-00-00-00-00.jpg
-- name: stories-36349148770-1a9d2692b2-z.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36349148770-1a9d2692b2-z.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-umberto-bocc.jpg
-- name: oldcabin-oldcabin-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-purple-pond.jpg
-- name: braceros-domingo-ulloa-shipping-container-ship-sunny-day.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-shipping-container-ship-sunny-day.jpg
-- name: beach-rocks-beach-rocks-currents-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-oily-mcoilface.jpg
-- name: containership-containership-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-smoking-cigarette.jpg
-- name: old-door-lock-old-door-lock-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-atari-missle.jpg
-- name: nazi-invasion-christ-cross-chalice.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-christ-cross-chalice.jpg
-- name: berlinwall2-berlinwall-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-gred-mash.jpg
-- name: copper-circuit-border-fence-down-the-line-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-border-fence-down-the-line-2.jpg
-- name: old-door-lock-old-door-lock-2-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-aqua.jpg
-- name: ellis-island-ellis-island-room-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-kandinsky-bv.jpg
-- name: legal-statue-legalstatue-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-hot-spicy.jpg
-- name: copper-circuit-pigeons-do-not-feed-them.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-pigeons-do-not-feed-them.jpg
-- name: la-muse-grain-ship-docking-grass.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-grain-ship-docking-grass.jpg
-- name: legal-statue-legalstatue-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-brush.jpg
-- name: stalin-time-through-berlin-wall.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-through-berlin-wall.jpg
+- name: statue-of-liberty-front-view-statueofliberty-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-matrix.jpg
+- name: windowmountain-window-mountain-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-yellow-paper.jpg
+- name: bf-skinner-abandoned-church-far.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-abandoned-church-far.jpg
+- name: berlinwall2-berlinwall-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-cinnamon-rolls.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-deep-connections.jpg
+- name: curtain-curtain-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-constitution.jpg
+- name: white-house-lawn-white-house-lawn-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-blue-electricity.jpg
+- name: copper-circuit-old-building-seattle-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-building-seattle-clouds.jpg
+- name: aws-s3-square-ellis-island-nazi-poster-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-ellis-island-nazi-poster-square.jpg
+- name: yosemite-yosemite-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-alberto-giacometti.jpg
+- name: liberty-back-statue-liberty-back-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dali-three.jpg
+- name: old-door-lock-old-door-lock-2-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-alien-goggles.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-sunday.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-sunday.JPG
+- name: stories-new-79-110-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-79-110-800-500-0-max-0--5--1.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-blue-circuit-3.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-circuit-3.png
+- name: white-house-whitehouse-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-spagetti-accident.jpg
+- name: stories-new-52-175-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-52-175-800-500-0-max-0-1--1.jpg
+- name: stalin-time-castle-window_35928999923_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-castle-window_35928999923_o.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dali-three.jpg
+- name: nazi-invasion-japanese-garden-tree.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-japanese-garden-tree.jpg
+- name: rain-princess-checkpoint-charlie-mcdonalds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-checkpoint-charlie-mcdonalds.jpg
+- name: abandonedbuildings_far_away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_far_away.jpg
+- name: border-crossing-bordercrossing-ww2-color.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-ww2-color.png
+- name: art-museum-art-museum-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-circuit-5.jpg
+- name: bf-skinner-old-building-and-cars_36680898846_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-building-and-cars_36680898846_o.jpg
+- name: mistywoods-babyfoot-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-spagetti-accident.jpg
+- name: server-cloud-server-racks-door-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-graham-sutherland.jpg
+- name: mistywoods-babyfoot-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-clean-view.jpg
+- name: christianity-christianity-under-construction-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-colored-circuits.jpg
+- name: server-cloud-server-racks-clouds-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-smoking-cigarette.jpg
+- name: white-house-lawn-white-house-lawn-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-deep-connections.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-dark-soul.jpg
+- name: hollywood-building-hollywood-building-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-oily-mcoilface.jpg
+- name: gypsy-wagon-gypsywagon-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-monet-one.jpg
+- name: bluelake-hot-spicy-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-hot-spicy-file-00-00-00-00.jpg
+- name: machine-road-machine-road-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-really-hot.jpg
+- name: old-house-oldhouse-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-spagetti-accident.jpg
+- name: paris-paris-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-space-pizza.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-gred-mash.jpg
+- name: locked-up-steam-lock-up-steam-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-constitution.jpg
+- name: power-lines-power-lines-empty-space-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-feed-people.jpg
+- name: store-on-corner-oldcabin-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-wols.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-really-hot.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-really-hot.JPG
+- name: bf-skinner-hollywood-sign-hills.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-hollywood-sign-hills.jpg
+- name: blossombar-gan-vogh-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-gan-vogh-file-00-00-50-62.jpg
+- name: oldhouse-oldhouse-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-blue-granite.jpg
+- name: miamibeach-miamibeach-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-rainbow-festival.jpg
+- name: nyc-flag-nycflag-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-yellow-paper.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-copper-circuit.jpg
+- name: copper-circuit-old-gas-station_36588462091_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-gas-station_36588462091_o.jpg
+- name: dc-statue-dcstatue-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-gred-mash.jpg
 ---
 Cher Proved She Has Nothing To Prove On Thursday Night In Dallas.&nbsp;Hounds Tame Cedar Shoals To Advance To Quarterfinals.&nbsp;Kolby Glenn And Jack Ruch.&nbsp;Salida Community Awards Open For Nominations.&nbsp;Geologist To Share Research On Plum Island's Formation, Erosion.&nbsp;Taking Care Of Your Office Appliances In The Right Way!.&nbsp;Police Release Identity Of Man Killed In Hampton Roads Center Parkway Crash.&nbsp;Lady Devils Beat Cedar, Hart.&nbsp;
